syntax = "proto3";

package discord;

service Handshake {
  rpc DoHandshake (HandshakeRequest) returns (HandshakeReply);
}

service StatusChannel {
  rpc Update (ContentRequest) returns (ContentResponse);
}

service ConnectAccountChannel {
  rpc TryConnect (SendConnectionCodeRequest) returns (SendConnectionCodeResponse);
}

service Messaging {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc SendMessageToUser (SendMessageToUserRequest) returns (SendMessageToUserResponse);
}

message HandshakeRequest {
  string message = 1;
}

message HandshakeReply {
  string message = 1;
}

message ContentRequest {
  bool _unused = 1;
}

message ContentResponse {
  string message = 1;
}

message SendConnectionCodeRequest {
  string code = 1;
  uint64 userId = 2;
}

message SendConnectionCodeResponse {
  bool success = 1;
  string message = 2;
}

message SendMessageRequest {
  uint64 channelId = 1;
  string message = 2;
}

message SendMessageResponse {
  bool success = 1;
  uint64 messageId = 2;
}

message SendMessageToUserRequest {
  uint64 userId = 1;
  string message = 2;
}

message SendMessageToUserResponse {
  bool success = 1;
  uint64 messageId = 2;
}